# osdu-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  release.yml  test.yml
osdu_client/: __init__.py  auth.py  client.py  exceptions.py  utils.py  validation.py
osdu_client/services/: __init__.py  base.py  legal_api.py  schema_api.py  sdms_api.py  storage_api.py
src/osdu_client/: __init__.py  auth.py  client.py  exceptions.py  jsonschema.py  user.py
tests/: utils.py
tests/dataset/: conftest.py  test_dataset.py
tests/entitlements/: conftest.py  swagger.yaml  test_entitlements.py
tests/file/: conftest.py  swagger.yaml  test_file.py
tests/indexer/: conftest.py  test_indexer.py
tests/legal/: conftest.py  test_legal.py
tests/notification/: conftest.py  test_notification.py
tests/partition/: conftest.py  test_partition.py
tests/policy/: conftest.py  swagger.yaml  test_policy.py
tests/pws/: conftest.py  test_pws.py
tests/rafs/: conftest.py  swagger.yaml  test_rafs.py  test_rafs_v1.py  test_rafs_v2.py
tests/register/: conftest.py  test_register.py
tests/schema/: conftest.py  swagger.yaml  test_schema.py
tests/sdms/: conftest.py  swagger.yaml  test_sdms.py
tests/search/: conftest.py  swagger.yaml  test_search.py
tests/secret/: conftest.py  test_secret.py
tests/storage/: conftest.py  test_storage.py
tests/wellbore/: conftest.py  swagger.yaml  test_wellbore.py  test_wellbore_v2.py  test_wellbore_v3.py
tests/welldelivery/: conftest.py  swagger.yaml  test_welldelivery.py
(+107 files in other folders)
